--- a/CollectionTest/CollectionTest.csproj
+++ b/CollectionTest/CollectionTest.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CodeTest.cs" />
     <Compile Include="Collection\DatedEntityComparer.cs" />
     <Compile Include="Collection\DatedSortedSet.cs" />
+    <Compile Include="Collection\SortedIndexedArray.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Collection\DatedC5SortedArray.cs" />
     <Compile Include="Model\Dog.cs" />
